cse-demo-csi-cpi.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: cse-demo-csi-cpi
  namespace: cse-demo-csi-cpi
spec:
  selector:
    matchLabels:
      app: nginx
  serviceName: "cse-demo-csi-cpi-service"
  replicas: 1
  template:
    metadata:
      labels:
        app: nginx
    spec:
      terminationGracePeriodSeconds: 10
      containers:
      - name: nginx
        image: k8s.gcr.io/nginx-slim:0.8
        ports:
        - containerPort: 80
          name: nginx
        volumeMounts:
        - name: workdir
          mountPath: /usr/share/nginx/html
  volumeClaimTemplates:
  - metadata:
      name: workdir
    spec:
      accessModes: [ "ReadWriteOnce" ]
      storageClassName: "vcd-disk-dev"
      resources:
        requests:
          storage: 1Gi
---
apiVersion: v1
kind: Service
metadata:
  name: cse-demo-csi-cpi-service
  namespace: cse-demo-csi-cpi
spec:
  selector:
    app: nginx
  ports:
    - port: 80
      targetPort: 80
  type: LoadBalancer
