shapes.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: circles
spec:
  replicas: 3
  selector:
    matchLabels:
      app: circles
  template:
    metadata:
      labels:
        app: circles
    spec:
      containers:
      - name: circles
        image: pleshakov/circles:0.1
        ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: circles
spec:
  ports:
  - port: 80
    targetPort: 80
    protocol: TCP
    name: http
  selector:
    app: circles
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: triangles
spec:
  replicas: 1
  selector:
    matchLabels:
      app: triangles
  template:
    metadata:
      labels:
        app: triangles
    spec:
      containers:
      - name: triangles
        image: pleshakov/triangles:0.1
        ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: triangles
  labels:
spec:
  ports:
  - port: 80
    targetPort: 80
    protocol: TCP
    name: http
  selector:
    app: triangles
